--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,9 @@ body {
     background-color: gray;
 }
 
+#inFull {
+    font-size: .75em;
+    text-align: center;
+    justify-content: center;
+}
+
